[tool.poetry]
name = "booking"
version = "0.1.0"
description = ""
authors = ["Evgeniy Polyakov <evgenickus@gmain.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.3"
uvicorn = "^0.49.0"
sqlalchemy = "^2.0.50"
sqlalchemy-utils = "^0.42.1"
bcrypt = "4.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.13.0"
python-multipart = "^0.0.32"
psycopg2-binary = "^2.9.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
