[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Evgeniy Polyakov <evgenickus@gmain.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.3"
uvicorn = "^0.49.0"
sqlalchemy = "^2.0.50"
sqlalchemy-utils = "^0.42.1"
passlib = {version = "1.7.4", extras = ["bcrypt"]}
bcrypt = "4.3.0"
pyjwt = "^2.13.0"
python-multipart = "^0.0.32"
psycopg2-binary = "^2.9.12"
pytest = "^9.0.3"
httpx2 = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
